--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,6 +18,9 @@
     .navbar-brand {
       font-weight: bold;
     }
+    h6 {
+      font-size: large;
+    }
   </style>
 </head>
 <body>
@@ -36,8 +39,8 @@
           <span class="highlight" th:text="${warningLabel}">Attention</span>
         </div>
       </div>
-      <h1>From <span class="highlight">Cyber Threats</span> of the country and the people</h1>
-      <h1>We will keep you safe.</h1>
+      <h1>Empowering <span class="highlight">the Nation</span> </h1>
+      <h1> through Cyber Resilience</h1>
     </div>
     <div class="slider-box" id="text-slider">
       <img th:src="@{/assets/images/hero-3.png}" height="250" width="750" class="hero"/>
@@ -48,6 +51,32 @@
     </div>
   </div>
   
+  <div class="container mt-3">
+      <h2>Our Pioneers</h2>
+      <div class="d-flex justify-content-center justify-content-between">
+        <div>
+          <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Honorable Chief Advisor</h6>
+          <p class="text-center"><img src="/media?id=.jpg/Pioneer-1.jpg" class="leaders-face" height="150" width="150"/></p>
+          <h6 class="text-center">Dr. Muhammad Yunus</h6>
+        </div>
+        <div>
+            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Special Assistant to Chief Advisor</h6>
+            <p class="text-center"><img src="/media?id=.jpg/Pioneer-2.jpg" class="leaders-face" height="150" width="150"/></p>
+            <h6 class="text-center">Faiz Ahmad Taiyeb</h6>
+        </div>
+        <div>
+            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Secretary</h6>
+            <p class="text-center"><img src="/media?id=.jpg/Pioneer-3.jpg" class="leaders-face" height="150" width="150"/></p>
+            <h6 class="text-center">Shish Haider Chowdhury, NDC</h6>
+        </div>
+        <div>
+            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Executive Director, BCC</h6>
+            <p class="text-center"><img src="/media?id=.jpg/Pioneer-4.jpg" class="leaders-face" height="150" width="150"/></p>
+            <h6 class="text-center">Mr. Md. Abu Sayed</h6>
+        </div>
+      </div>
+  </div>
+  <br/><br/>
   <section class="services-section">
     <h2>Services</h2>
     <div class="slider-container">
@@ -97,7 +126,7 @@
                 <img th:src="${alert.getThumbnail()}" th:unless="${alert.getThumbnail() == null or alert.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                 <div class="card-body">
                     <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="card-title">
-                        <h4 th:text="${alert.getTitle()}">Post Title</h4>
+                        <h3 th:text="${alert.getTitle()}">Post Title</h3>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(alert.getSubTitle(), 0, 150)} + '....'"></p>
                     <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="btn btn-primary">Read More</a>
@@ -111,13 +140,13 @@
   <div class="container">
       <h2>Magazines</h2>
       <div class="row">
-        <div class="col-md-6 col-lg-4 mb-2" th:each="magazine : ${magazinesList}">
+        <div class="col-md-6 col-lg-4 mb-4" th:each="magazine : ${magazinesList}">
             <div class="card h-100">
                 <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'" th:if="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                 <img th:src="${magazine.getThumbnail()}" th:unless="${magazine.getThumbnail() == null or magazine.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                 <div class="card-body">
                     <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="card-title">
-                        <h4 th:text="${magazine.getTitle()}">Post Title</h4>
+                        <h3 th:text="${magazine.getTitle()}">Post Title</h3>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(magazine.getSubTitle(), 0, 150)} + '....'"></p>
                     <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="btn btn-primary">Read More</a>
@@ -127,42 +156,17 @@
       </div>
       <a class="show-more" href="/magazines">Show More</a>
   </div>
-  <div class="container">
-      <h2>Our Pioneers</h2>
-      <div class="d-flex justify-content-center justify-content-between" >
-        <div>
-          <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Honorable Chief Advisor</h6>
-          <p class="text-center"><img src="/media?id=.jpg/Pioneer-1.jpg" class="leaders-face" height="150" width="150"/></p>
-          <h6 class="text-center">Dr. Muhammad Yunus</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Special Assistant to Chief Advisor</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-2.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Faiz Ahmad Taiyeb</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Secretary</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-3.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Shish Haider Chowdhury, NDC</h6>
-        </div>
-        <div>
-            <h6 class="text-center" style="background-color: #3636b2; color: white; padding: 5px;">Executive Director, BCC</h6>
-            <p class="text-center"><img src="/media?id=.jpg/Pioneer-4.jpg" class="leaders-face" height="150" width="150"/></p>
-            <h6 class="text-center">Dr. Muhammed Mehedi Hassan</h6>
-        </div>
-      </div>
-  </div>
-  <br/><br/>
+  
   <div class="container">
       <h2>News & Events</h2>
       <div class="row">
-        <div class="col-md-6 col-lg-4 mb-3" th:each="news : ${newsList}">
+        <div class="col-md-6 col-lg-4 mb-4" th:each="news : ${newsList}">
             <div class="card h-100">
                 <img src="/assets/images/thumbnails/news.png" th:if="${news.getThumbnail() == null or news.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                 <img th:src="${news.getThumbnail()}" th:unless="${news.getThumbnail() == null or news.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                 <div class="card-body">
                     <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="card-title">
-                        <h4 th:text="${news.getTitle()}">Post Title</h4>
+                        <h3 th:text="${news.getTitle()}">Post Title</h3>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(news.getSubTitle(), 0, 150)} + '....'"></p>
                     <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="btn btn-primary">Read More</a>
