--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,12 +25,12 @@
         </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="discoverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Discover
+            About Us
           </a>
           <ul class="dropdown-menu" aria-labelledby="discoverDropdown">
+            <li><a class="dropdown-item" href="/mission-vision">Mission & Vision</a></li>
             <li><a class="dropdown-item" href="/who-we-are">Who We Are</a></li>
             <li><a class="dropdown-item" href="/what-we-do">What We Do</a></li>
-            <li><a class="dropdown-item" href="/mission-vision">Mission & Vision</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/tlp">TLP</a></li>
           </ul>
