--- a/src/main/resources/templates/post/post-list-default-card.html
+++ b/src/main/resources/templates/post/post-list-default-card.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/common.css}">
   <link rel="stylesheet" th:href="@{/assets/css/postlist-style-1.css}">
+
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -35,9 +36,9 @@
                     <img th:src="${post.getThumbnail()}" th:unless="${post.getThumbnail() == null or post.getThumbnail() == ''}" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <a th:href="'/'+${post.getCategory()}+'/'+${post.getUri()}" class="card-title">
-                            <h4 th:text="${post.getTitle()}">Post Title</h4>
+                            <h3 th:text="${post.getTitle()}">Post Title</h3>
                         </a>
-                        <p class="card-text" th:text="${#strings.substring(post.getSubTitle(), 0, 150)} + '....'"></p>
+                        <p class="card-text" style="font-size: large;" th:text="${#strings.substring(post.getSubTitle(), 0, 150)} + '....'"></p>
                         <a th:href="'/'+${post.getCategory()}+'/'+${post.getUri()}" class="btn-cirt">Read More</a>
                     </div>
                 </div>
