Documents category added

--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -53,6 +53,7 @@
                     <option value="events">Events</option>
                     <option value="magazines">Magazines</option>
                     <option value="guidelines">Guidelines</option>
+                    <option value="documents">Documents</option>
                     <option value="acts">Acts</option>
                     <option value="policies">Policies</option>
                 </select>
