--- a/src/main/resources/templates/admin/admin-post-edit-form.html
+++ b/src/main/resources/templates/admin/admin-post-edit-form.html
@@ -54,6 +54,7 @@
                     <option value="guidelines">Guidelines</option>
                     <option value="acts">Acts</option>
                     <option value="policies">Policies</option>
+                    <option value="documents">Documents</option>
                 </select>
             </div>
 
