--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -109,6 +109,10 @@
           <img src="https://img.icons8.com/ios-filled/100/folder-invoices.png" alt="Training Platform" />
           <p>Creating Awareness & Capacity Building</p>
         </a>
+        <a href="/service#catalog" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/100/folder-invoices.png" alt="Service Catalog" />
+          <p>Service Catalog</p>
+        </a>
       </div>
       <div class="nav-arrows">
         <button class="nav-arrow" id="prev">‹</button>
