--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,6 +32,7 @@
             <li><a class="dropdown-item" href="/who-we-are">Who We Are</a></li>
             <li><a class="dropdown-item" href="/what-we-do">What We Do</a></li>
             <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/service#catalog">Service Catalog</a></li>
             <li><a class="dropdown-item" href="/tlp">TLP</a></li>
           </ul>
         </li>
